Add Users pages

--- a/src/app/home/header/header.component.html
+++ b/src/app/home/header/header.component.html
@@ -7,7 +7,7 @@
             <a class="nav-link" href="#">My Account</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Users</a>
+            <a class="nav-link" routerLink="/users">Users</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" (click)="logout()" href="#">Logout</a>
