--- a/src/app/home/users/user/edit-user/edit-user.component.html
+++ b/src/app/home/users/user/edit-user/edit-user.component.html
@@ -2,7 +2,7 @@
     <div class="row d-flex">
         <div class="col-md-6">
             <div class="card" id="form1">
-                <div class="form-data" v-if="!submitted">
+                <div class="form-data">
                     <div class="forms-inputs mb-4"> <span>Email</span> <input autocomplete="off" type="text"  formControlName="email">
                         <div class="invalid-feedback">A valid email is required!</div>
                     </div>
