--- a/src/app/home/users/users-overview/users-overview.component.html
+++ b/src/app/home/users/users-overview/users-overview.component.html
@@ -1,41 +1,43 @@
-<div class="mat-elevation-z8">
-    <table mat-table [dataSource]="dataSource">
-
-        <ng-container matColumnDef="id">
-            <th mat-header-cell *matHeaderCellDef> No. </th>
-            <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="first_name">
-            <th mat-header-cell *matHeaderCellDef> First Name </th>
-            <td mat-cell *matCellDef="let element"> {{element.first_name}} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="last_name">
-            <th mat-header-cell *matHeaderCellDef> Last Name </th>
-            <td mat-cell *matCellDef="let element"> {{element.last_name}} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="email">
-            <th mat-header-cell *matHeaderCellDef> Email </th>
-            <td mat-cell *matCellDef="let element"> {{element.email}} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="action">
-            <tr><th mat-header-cell *matHeaderCellDef> Action </th></tr>
-            <tr>
-              <td mat-cell *matCellDef="let row" style="width:20%">
-                <button mat-icon-button color="primary" (click)="updateUser(row)" title="Update User"><mat-icon>update</mat-icon></button>
-                <button mat-icon-button color="primary" (click)="deleteUser(row)" title="Delete User"><mat-icon>delete</mat-icon></button>
-              </td>
-            <tr>
-          </ng-container>
-
-
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
-
-    <mat-paginator [pageSizeOptions]="[10, 20]" showFirstLastButtons aria-label="Select page of periodic elements">
-    </mat-paginator>
-</div>
+<ng-container>
+    <div class="mat-elevation-z8">
+        <table mat-table [dataSource]="dataSource">
+    
+            <ng-container matColumnDef="id">
+                <th mat-header-cell *matHeaderCellDef> No. </th>
+                <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+            </ng-container>
+    
+            <ng-container matColumnDef="first_name">
+                <th mat-header-cell *matHeaderCellDef> First Name </th>
+                <td mat-cell *matCellDef="let element"> {{element.first_name}} </td>
+            </ng-container>
+    
+            <ng-container matColumnDef="last_name">
+                <th mat-header-cell *matHeaderCellDef> Last Name </th>
+                <td mat-cell *matCellDef="let element"> {{element.last_name}} </td>
+            </ng-container>
+    
+            <ng-container matColumnDef="email">
+                <th mat-header-cell *matHeaderCellDef> Email </th>
+                <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+            </ng-container>
+    
+            <ng-container matColumnDef="action">
+                <tr><th mat-header-cell *matHeaderCellDef> Action </th></tr>
+                <tr>
+                  <td mat-cell *matCellDef="let row" style="width:20%">
+                    <button mat-icon-button color="primary" (click)="updateUser(row)" title="Update User"><mat-icon>update</mat-icon></button>
+                    <button mat-icon-button color="primary" (click)="deleteUser(row)" title="Delete User"><mat-icon>delete</mat-icon></button>
+                  </td>
+                <tr>
+              </ng-container>
+    
+    
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+    
+        <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label="Select page of periodic elements">
+        </mat-paginator>
+    </div>
+</ng-container>
